--- a/section 9 practice/user-registration/src/components/UI/Card.module.css
+++ b/section 9 practice/user-registration/src/components/UI/Card.module.css
@@ -1,8 +1,9 @@
 .card {
   padding: 1rem;
-  border-radius: 4px;
+  border-radius: 10px;
 
   max-width: 30rem;
   margin: 2rem auto;
   background: white;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
 }
