--- a/section 9 practice/user-registration/src/components/UI/Button.module.css
+++ b/section 9 practice/user-registration/src/components/UI/Button.module.css
@@ -1,11 +1,18 @@
 .button {
-  background: purple;
+  font: inherit;
+  border: 1px solid #4f005f;
+  background: #4f005f;
   color: white;
-  padding: 0.2rem 0.6rem;
-  border: none;
+  padding: 0.25rem 1rem;
   cursor: pointer;
 }
 
-.button:hover {
-  background: rgb(187, 41, 187);
+.button:hover,
+.button:active {
+  background: #741188;
+  border-color: #741188;
+}
+
+.button:focus {
+  outline: none;
 }
