use card component in modal and fix modal styles and show no records text

--- a/section 9 practice/user-registration/src/components/Modals/Modal.module.css
+++ b/section 9 practice/user-registration/src/components/Modals/Modal.module.css
@@ -7,6 +7,10 @@
   background: rgba(0, 0, 0, 0.6);
 }
 
+.modal .card {
+  padding: 0;
+}
+
 .modal-main {
   position: fixed;
   width: 80%;
@@ -62,4 +66,3 @@
   font-size: 1.25rem;
   color: white;
 }
-
