--- a/section 9 practice/user-registration/src/components/UI/Card.module.css
+++ b/section 9 practice/user-registration/src/components/UI/Card.module.css
@@ -2,8 +2,7 @@
   padding: 1rem;
   border-radius: 10px;
 
-  max-width: 30rem;
-  margin: 2rem auto;
   background: white;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
+  margin-bottom: 1.5rem;
 }
