--- a/section 9 practice/user-registration/src/components/Modals/Modal.module.css
+++ b/section 9 practice/user-registration/src/components/Modals/Modal.module.css
@@ -1,10 +1,11 @@
-.modal {
+.backdrop {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.6);
+  height: 100vh;
+  z-index: 10;
+  background: rgba(0, 0, 0, 0.75);
 }
 
 .modal .card {
@@ -20,6 +21,7 @@
   transform: translate(-50%, -50%);
   border-radius: 0.3rem;
   background: white;
+  z-index: 100;
 }
 
 .display-block {
