--- a/section 18 practice http forms/src/components/Cart/Cart.module.css
+++ b/section 18 practice http forms/src/components/Cart/Cart.module.css
@@ -17,3 +17,18 @@
   color: #46443c;
 }
 
+.modal-actions {
+  display: flex;
+  justify-content: flex-end;
+  gap: 1rem;
+}
+
+.modal-actions .text-button {
+  color: #1d1a16;
+}
+
+.modal-actions .text-button:hover,
+.modal-actions .text-button:active {
+  color: #312c1d;
+}
+
