--- a/section 18 practice http forms/src/components/Cart/Checkout.module.css
+++ b/section 18 practice http forms/src/components/Cart/Checkout.module.css
@@ -1,9 +1,5 @@
-.modal-actions .text-button {
-    color: #1d1a16;
-  }
-  
-  .modal-actions .text-button:hover,
-  .modal-actions .text-button:active {
-    color: #312c1d;
-  }
-  
+.control-row {
+    display: flex;
+    justify-content: flex-start;
+    gap: 1rem;
+}
