--- a/section 18 practice http forms/src/components/UI/Modal.module.css
+++ b/section 18 practice http forms/src/components/UI/Modal.module.css
@@ -12,3 +12,18 @@
 .modal::backdrop {
   background-color: rgba(0, 0, 0, 0.55);
 }
+
+.modal-actions {
+  display: flex;
+  justify-content: flex-end;
+  gap: 1rem;
+}
+
+.modal-actions .text-button {
+  color: #1d1a16;
+}
+
+.modal-actions .text-button:hover,
+.modal-actions .text-button:active {
+  color: #312c1d;
+}
