fix modal fade slide up

--- a/section 18 practice http forms/src/components/UI/Modal.module.css
+++ b/section 18 practice http forms/src/components/UI/Modal.module.css
@@ -27,3 +27,15 @@
 .modal-actions .text-button:active {
   color: #312c1d;
 }
+
+@keyframes fade-slide-up {
+  from {
+    opacity: 0;
+    transform: translateY(4rem);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
