--- a/section 18 practice http forms/src/components/UI/Error.module.css
+++ b/section 18 practice http forms/src/components/UI/Error.module.css
@@ -1,3 +1,17 @@
 .error {
-  text-align: center;
+  width: 90%;
+  max-width: 25rem;
+  margin: 2rem auto;
+  padding: 1rem;
+  background-color: #f9b8b8;
+  color: #6d0b0b;
+  border-radius: 6px;
+}
+
+.error h2 {
+  margin: 0;
+}
+
+.error p {
+  margin: 0;
 }
